syntax = "proto3";
package helium.mapper;

import "service/attach_response.proto";
import "service/scan_response.proto";
import "service/gps_response.proto";

message modem_response_t {
  oneof message {
    gps_response gps_response = 1;
    scan_response scan_response = 2;
    attach_response attach_response = 3;
  }
  repeated bytes signature = 4;
}
